Fix style of slides and add wraping around

--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -122,6 +122,10 @@
 
   .slider {
 
+    &__container {
+      display: flex;
+    }
+
     &__photo {
       flex: 1;
     }
